app/assets/stylesheets/prod_description.scss
// Place all the styles related to the prod_description controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: https://sass-lang.com/

*{
  font-family: 'Roboto', sans-serif;  
}

span.fa.fa-heart.checked {
    color: red;
  }

.img-prod{ 
 display: block;
  max-width: 100%;  
  height: auto;
}

.col-prod-img{
  padding: 0 !important;
}

.product-desc{
  flex-direction: row;
  height: auto;
  width: 100%;
  padding-left: 20px;  
  font-weight: 400;
}

.product-desc lead{
  font-weight: 00 !important;
  font-size: 0.8em;
}

.box-rating{
  padding:0; 
  margin:0;    
  border-color: rgba(0, 0, 0, 0.15) !important;
}

.category-desc{
  padding: 6px 14px;
  border-radius: 10px;
  margin: 10px;
  color: black;
  background-color: white;  
  border: 1px solid lightgray;
  font-weight: 900;
  text-align: center;
}

.btn-buy, .btn-call{
  background-color: #F78100 !important;
  padding:0;
  margin:0;
  border: none;
}

.product-desc b , h2{
  font-weight: 700 !important;  

}

.box-rating button{
  color: black !important;  
 // border-left: none;
  //border-bottom: none;
 border-color: rgba(0, 0, 0, 0.15) !important;

}

.row-hr{
  border-style:ridge;
  border-color:  rgba(0, 0, 0, 0.11);
  border-top:1px;
}

.seller-pic{
  display: block;
  max-width:100%;
  border-radius: 50%;
  height: auto;
  padding:0;
}
.box-pic{
background-color: red;
border-radius:50%;
padding:0;
}

.footer{  
  border-style:ridge;  
}

.footer-text{
  margin-left: -35px;
}

.footer-prod-desc{
display: inline;
}

